# ImageProccesor

./: CMakeLists.txt  README.md
BmpHandler/: bmp_handler.cpp  bmp_handler.h
FilterHandler/: filter_handler.cpp  filter_handler.h  test_filter_handler.cpp
Filters/Crop/: crop.cpp  crop.h
Filters/EdgeDetection/: edge_detection.cpp  edge_detection.h
Filters/Filter/: filter.cpp  filter.h
Filters/GaussianBlur/: gaussian_blur.cpp  gaussian_blur.h
Filters/Grayscale/: grayscale.cpp  grayscale.h
Filters/Minecraft/: minecraft.cpp  minecraft.h
Filters/Negative/: negative.cpp  negative.h
Filters/Sharpening/: sharpening.cpp  sharpening.h
Filters/UltraZhmih/: ultra_zhmih.cpp  ultra_zhmih.h
Filters/Zhmih/: zhmih.cpp  zhmih.h
Image/: image.cpp  image.h
Parser/: parser.cpp  parser.h  test_parser.cpp
